[package]
name = "tcpserver"
version = "0.3.10"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/tcp_server"
documentation = "https://docs.rs/tcpserver"
description = "rust tcp server frame."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log="0.4"
aqueue="0.3"
data-rw="0.2"
async-channel = "1.5.1"