[package]
name = "tcpserver"
version = "0.4.1"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/tcp_server"
documentation = "https://docs.rs/tcpserver"
description = "rust tcp server frame."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["rt", "net","io-util"] }
log="0.4"
aqueue="0.4"
data-rw="0.2"


[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net","io-util","macros"] }
mimalloc = { version="0.1",default-features=false}