[package]
name = "tcpserver"
version = "1.4.0"
authors = ["yi lu <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/tcp_server"
documentation = "https://docs.rs/tcpserver"
description = "rust tcp server frame."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
tls=["openssl","openssl-sys","tokio-openssl"]

[dependencies]
tokio = { version = "1", features = ["rt", "net","io-util"] }
log="0.4"
aqueue="1.1"
data-rw="0.2"
async-trait="0.1"
anyhow="1.0"
openssl = { version="0.10",optional = true}
openssl-sys = { version="0.9",optional = true}
tokio-openssl =  { version="0.6",optional = true}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
mimalloc = { version="0.1",default-features=false}
lazy_static="1.4"
env_logger = "0.8"